10/7/10 enable Electric Field Detector check box (again) for feature development
# 0.00.32 (44871) Oct 7, 2010
10/7/10 development version to share with KSU
10/7/10 instead of using dielectric=air in Introduction tab, use custom dielectric with a huge offset 
10/7/10 disable Electric Field Detector check box (again)
10/7/10 rotate field probe
10/7/10 enable Electric Field Detector check box (again) for feature development
# 0.00.31 (44860) Oct 7, 2010
10/7/10 development version to share with KSU
10/7/10 fix: custom dielectric constant not reset by Reset All
10/7/10 gray out Voltmeter and Electric Field Detector check boxes, since they are not yet implemented
10/7/10 default custom dielectric constant to 5
10/7/10 default dielectric charge view to "all"
10/7/10 default Plate Charge view to "on", as specified in the design doc
10/7/10 default dielectric offset to just outside the capacitor, as specified in the design doc
10/7/10 fix: reverse polarity of charges on the dielectric
10/7/10 create body of field detector
10/7/10 adjust origin of field detector probe to be at center of crosshairs
10/7/10 enable Electric Field Detector check box for feature development
# 0.00.30 (44840) Oct 7, 2010
10/7/10 development version to share with KSU
# 0.00.29 (44839) Oct 7, 2010
10/7/10 absorb color strategy into BoxNode, delete IBoxColorStrategy
10/7/10 delete unused box coloring strategies, since we seem to have settled on this
10/7/10 order dielectrics in combo box by increasing dielectric constant
10/7/10 increase max spacing between positive and negative charges in dielectric charge pairs
10/7/10 increase spacing between dielectric charge pairs so that we have 3 rows when plate separation is 10mm
10/7/10 fix BatteryCapacitorCircuit.getMaxDielectricEField, it wasn't the max, and this was affecting dielectric "all charges" view
10/7/10 don't change the transparency of transparent dielectrics when field view (etc) is selected
10/7/10 change dielectric colors, per Noah P