@@ -14,8 +14,8 @@ import edu.colorado.phet.capacitorlab.module.dielectric.DielectricModule;
  * This module is identical to the "Dielectric" module, except that:
  * <ul>
  * <li>the dielectric is not visible
+ * <li>the dielectric controls are not visible
  * <li>the dielectric is fully outside the capacitor at all times
- * <li>dielectric controls are not visible
  * </ul>
  *
  * @author Chris Malley (cmalley@pixelzoom.com)
@@ -24,13 +24,13 @@ public class IntroductionModule extends DielectricModule {
     
     public IntroductionModule( Frame parentFrame, boolean dev ) {
         super( CLStrings.TAB_INTRODUCTION, parentFrame, dev );
-        getDielectricCanvas().setDielectricVisible( false ); // hide dielectric and offset drag handle
-        getDielectricControlPanel().setDielectricPropertiesControlPanelVisible( false ); // hide dielectric controls
+        setDielectricVisible( false );
+        setDielectricPropertiesControlPanelVisible( false );
     }
     
     @Override
     public void reset() {
         super.reset();
-        getDielectricModel().getCapacitor().setDielectricOffset( CLConstants.PLATE_SIZE_RANGE.getMax() + 1 ); // move dielectric outside plates
+        setDielectricOffset( CLConstants.PLATE_SIZE_RANGE.getMax() + 1 ); // move dielectric outside plates
     }
 }
