@@ -1,3 +1,5 @@
+10/7/10 refine how IntroductionModule subclasses DieletricModule 
+10/7/10 specify explicit default values for ranges in CLConstants
 10/7/10 enable Electric Field Detector check box (again) for feature development
 # 0.00.32 (44871) Oct 7, 2010
 10/7/10 development version to share with KSU
